--- a/src/components/sections/Range.css
+++ b/src/components/sections/Range.css
@@ -39,9 +39,15 @@
 @media screen and (max-width: 1000px){
   .range-item-container {
     width: 100%;
+    margin-top: 20px;
   }
 
   .range-section-container{
     margin-top: 50px;
+  }
+
+  .range-title{
+    font-size: 30px;
+    width: auto;
   }
 }
